test/fail/InvalidField.ma
data D : Set { c : D } fields f
